--- a/paginas/editar-produto.html
+++ b/paginas/editar-produto.html
@@ -38,13 +38,13 @@
         <option value="artesanal">Artesanato</option>
         <option value="natural">Beleza Natural</option>
         <option value="moda">Moda Consciente</option>
-        <option value="higiene">Higiene Pessoal Sustentável</option>
-        <option value="decoracao">Decoração Sustentável</option>
-        <option value="kit">Presentes Sustentáveis</option>
+        <option value="higiene">Higiene Pessoal</option>
+        <option value="decoracao">Decoração</option>
+        <option value="kit">Kits e Presentes</option>
         <option value="outro">Outro</option>
       </select>
       </div>
-      <label>Fotos:</label>
+      <label>Foto:</label>
       <input type="file" id="fotos" multiple accept="image/*" />
       <div id="preview-fotos"></div>
       <button type="submit">Salvar Alterações</button>
