--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -84,7 +84,7 @@
         e.preventDefault();
 
         const dados = {
-          usuarioId: usuarioAtual._id,
+          usuarioId: usuario._id,
           nome: form.nome.value.trim(),
           descricao: form.descricao.value.trim(),
           preco: parseFloat(form.preco.value),
