--- a/paginas/detalhes-produto.html
+++ b/paginas/detalhes-produto.html
@@ -33,18 +33,25 @@
       <button id="btn-comprar">Comprar</button>
 
       <!-- CARRINHO -->
-      <div id="icone-carrinho" class="carrinho-icone" title="Carrinho de Compras" aria-label="Carrinho de Compras">
-        <img id="carrinho" src="../assets/img/carrinho.png" alt="Ícone do carrinho de compras" />
-        <span id="contador-carrinho" aria-live="polite" aria-atomic="true">0</span>
-        <div class="carrinho-dropdown" id="carrinho-dropdown" aria-label="Conteúdo do carrinho">
-          <div id="lista-carrinho"></div>
-          <div class="carrinho-total" id="total-carrinho" aria-live="polite">Total: R$ 0,00</div>
-          <div class="carrinho-botoes">
-            <button class="btn-limpar" type="button">Limpar Carrinho</button>
-            <a href="/paginas/finalizar-compra.html" id="finalizar-compra" class="btn-finalizar" role="button">Finalizar Compra</a>
-          </div>
+        <div id="icone-carrinho" class="carrinho-icone" title="Carrinho de Compras">
+            <i class="fas fa-shopping-cart"></i>
+            <span id="contador-carrinho">0</span>
+
+            <div class="carrinho-dropdown" id="carrinho-dropdown">
+                <p class="carrinho-resumo">
+                    <strong id="resumo-itens">0</strong> itens no carrinho
+                </p>
+
+                <p class="carrinho-total" id="total-carrinho">
+                    Total: R$ 0,00
+                </p>
+
+                <a href="/paginas/carrinho.html" class="btn-ver-carrinho">
+                Ver carrinho
+                </a>
+            </div>
         </div>
-      </div>
+      <!-- FIM DO CARRINHO -->
 
       <!-- Botão para edição do produto, visível apenas para o dono -->
       <div id="editar-container" style="display: none;">
