--- a/paginas/admin.html
+++ b/paginas/admin.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Painel do Administrador</h1>
-    <p>Bem-vindo, mestre do universo.</p>
+    <p>Bem-vindo, Sr(a) Administrador</p>
     <div class="search-container">
         <a class="btn-voltar" href="../paginas/conta.html"><ion-icon name="person-outline"></ion-icon></a>
         <input type="text" id="admin-search-input" placeholder="Pesquisar por nome ou email...">
