Melhorias de design

--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -20,11 +20,11 @@
         <h1>Meus Pedidos</h1>
     </div>
     <nav class="header-nav">
-        <a href="/paginas/conta.html" title="Minha Conta"><ion-icon name="person-outline"></ion-icon></a>
+        <a href="/paginas/conta.html" title="Minha Conta"><ion-icon name="person-circle-outline" role="img" class="md hydrated"></ion-icon></a>
         <a href="/index.html" title="Página Inicial"><ion-icon name="home-outline"></ion-icon></a>
         <!-- CARRINHO -->
           <div id="icone-carrinho" class="carrinho-icone" title="Carrinho de Compras">
-              <ion-icon class="fas fa-shopping-cart md hydrated" role="img"><template shadowrootmode="open"><div class="icon-inner"></div></template></ion-icon>
+              <ion-icon class="fas fa-shopping-cart md hydrated" role="img"></ion-icon>
               <span id="contador-carrinho">0</span>
 
               <div class="carrinho-dropdown" id="carrinho-dropdown">
@@ -58,7 +58,7 @@
   <!-- MODAL DE CANCELAMENTO -->
   <div id="cancelModal" class="modal hidden">
     <div class="modal-content">
-      <h3>Justificar Cancelamento</h3>
+      <h2>Justificar Cancelamento</h2>
       <textarea id="cancelReason" placeholder="Digite o motivo (opcional )..."></textarea>
       <input type="password" id="cancelPassword" placeholder="Digite sua senha para confirmar" required />
       <div class="modal-botoes">
