--- a/paginas/admin.html
+++ b/paginas/admin.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <title>Painel Administrativo</title>
     <!-- ... seus meta tags, title, links de css ... -->
-    <link rel="stylesheet" href="../assets/css/admin.css">
-    <link rel="stylesheet" href="../assets/css/modal.css">
+    <link rel="stylesheet" href="../assets/css/paginas/admin.css">
+    <link rel="stylesheet" href="../assets/css/componentes/modal.css">
     <script>
         // GUARDA DE ROTA - PROTEÇÃO DE ACESSO
         const usuario = JSON.parse(localStorage.getItem('usuarioLogado'));
