--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <title>Meu Carrinho - EcoMarket</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/css/carrinho-page.css">
-  <link rel="stylesheet" href="../assets/css/feedback.css">
+  <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
+  <link rel="stylesheet" href="../assets/css/base/base.css">
+  <link rel="stylesheet" href="../assets/css/base/variaveis.css">
+  <link rel="stylesheet" href="../assets/css/componentes/botoes.css">
+  <link rel="stylesheet" href="../assets/css/componentes/header.css">
+  <link rel="stylesheet" href="../assets/css/paginas/carrinho-page.css">
   <link rel="shortcut icon" href="../assets/img/favicon.ico">
 </head>
 <body>
