--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoMarket - Produtos</title>
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../assets/css/produtos.css">
-    <link rel="stylesheet" href="../assets/css/carrinho.css">
-    <link rel="stylesheet" href="../assets/css/feedback.css">
-    <!-- Metadados para SEO e acessibilidade -->
-    <meta name="description" content="Confira todos os produtos disponíveis no EcoMarket SAMAVI, um marketplace sustentável para produtores locais.">
-    <meta name="author" content="Equipe EcoMarket SAMAVI">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="EcoMarket - Produtos">
-    <meta property="og:description" content="Navegue por produtos sustentáveis de produtores locais de Santa Maria da Vitória.">
-    <meta property="og:image" content="https://ecomarket-samavi.vercel.app">
-    <meta property="og:type" content="website">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EcoMarket - Produtos</title>
+  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="../assets/css/base/variaveis.css">
+  <link rel="stylesheet" href="../assets/css/base/base.css">
+  <link rel="stylesheet" href="../assets/css/componentes/header.css">
+  <link rel="stylesheet" href="../assets/css/componentes/carrinho.css">
+  <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
+  <link rel="stylesheet" href="../assets/css/componentes/botoes.css">
+  <link rel="stylesheet" href="../assets/css/paginas/produtos.css">
+  <!-- Metadados para SEO e acessibilidade -->
+  <meta name="description"
+    content="Confira todos os produtos disponíveis no EcoMarket SAMAVI, um marketplace sustentável para produtores locais.">
+  <meta name="author" content="Equipe EcoMarket SAMAVI">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="EcoMarket - Produtos">
+  <meta property="og:description"
+    content="Navegue por produtos sustentáveis de produtores locais de Santa Maria da Vitória.">
+  <meta property="og:image" content="https://ecomarket-samavi.vercel.app">
+  <meta property="og:type" content="website">
 </head>
 <body>
     <!-- NOTIFICAÇÃO DE FEEDBACK -->
