--- a/paginas/detalhes-produto.html
+++ b/paginas/detalhes-produto.html
@@ -7,9 +7,10 @@
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
   <title>Detalhes do Produto - EcoMarket</title>
   <!-- Estilos -->
-  <link rel="stylesheet" href="../assets/css/detalhes-produto.css" />
-  <link rel="stylesheet" href="../assets/css/carrinho.css">
-  <link rel="stylesheet" href="../assets/css/feedback.css">
+  <link rel="stylesheet" href="../assets/css/paginas/detalhes-produto.css" />
+  <link rel="stylesheet" href="../assets/css/componentes/carrinho.css">
+  <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
+  <link rel="stylesheet" href="../assets/css/base/base.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- Metadados para SEO -->
   <meta name="description"
