--- a/paginas/finalizar-compra.html
+++ b/paginas/finalizar-compra.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="../assets/css/finalizar.css">
-  <link rel="stylesheet" href="../assets/css/feedback.css">
-  <link rel="stylesheet" href="../assets/css/modal.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
+  <link rel="stylesheet" href="../assets/css/componentes/modal.css">
+  <link rel="stylesheet" href="../assets/css/componentes/header.css">
+  <link rel="stylesheet" href="../assets/css/base/base.css">
+  <link rel="stylesheet" href="../assets/css/base/variaveis.css">
+  <link rel="stylesheet" href="../assets/css/paginas/finalizar-pedido.css">
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <title>Finalizar Compra - EcoMarket</title>
 </head>
+
 <body>
   <div id="feedback" class="feedback"></div>
+  <header>
+    <a href="/index.html" class="logo-container" title="Voltar para a página inicial">
+      <img src="../assets/img/logo-300.png" alt="Logo EcoMarket" />
+      <h1>EcoMarket SAMAVI</h1>
+    </a>
+    <nav class="header-nav">
+      <a href="../paginas/produtos.html" class="btn-voltar" title="Voltar à página de produtos"
+        aria-label="Voltar à página de produtos">
+        <ion-icon name="storefront-outline" aria-hidden="true"></ion-icon>
+      </a>
+    </nav>
+  </header>
   <div class="container">
     <div class="topo-pagina">
       <h1>Resumo do Pedido</h1>
       <!-- NAVEGAÇÃO -->
-        <nav class="botoes-navegacao" aria-label="Navegação da página">
-          <a href="/index.html" class="btn-home" aria-label="Página inicial">
-            <ion-icon name="home-outline"></ion-icon>
-          </a>
-          <a href="../paginas/produtos.html" class="btn-voltar" title="Voltar à página de produtos" aria-label="Voltar à página de produtos">
-            <ion-icon name="storefront-outline"></ion-icon>
-          </a>
-          <a id="registrar-pedido" title="Registrar pedido">
-            <ion-icon name="newspaper-outline"></ion-icon>
-          </a>
-        </nav>
+      <nav class="botoes-navegacao" aria-label="Navegação da página">
+        <a id="registrar-pedido" class="btn-acao-pedido">
+          <ion-icon name="bag-check-outline"></ion-icon>
+          <span>Confirmar pedido</span>
+        </a>
+      </nav>
     </div>
     <div id="resumo-carrinho"></div>
 
   </div>
   <!-- MODAL(MENU) DE CONFIRMAÇÃO -->
   <div id="modal-confirmar-pedido" class="modal hidden">
-  <div class="modal-content">
-    <h2>Confirmação de Pedido</h2>
-    <p>Para confirmar o pedido, digite sua senha:</p>
-    <input type="password" id="senha-confirmacao" placeholder="Digite sua senha" />
-    <div class="modal-botoes">
-      <button id="confirmar-pedido">Confirmar</button>
-      <button id="cancelar-pedido">Cancelar</button>
+    <div class="modal-content">
+      <h2>Confirmação de Pedido</h2>
+      <p>Para confirmar o pedido, digite sua senha:</p>
+      <input type="password" id="senha-confirmacao" placeholder="Digite sua senha" />
+      <div class="modal-botoes">
+        <button id="confirmar-pedido">Confirmar</button>
+        <button id="cancelar-pedido">Cancelar</button>
+      </div>
+      <p id="erro-senha"></p>
     </div>
-    <p id="erro-senha"></p>
-  </div>
   </div>
   <!-- SCRIPTS -->
   <script src="../assets/js/vercel-analytics.js"></script>
@@ -51,4 +63,5 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
