--- a/paginas/login.html
+++ b/paginas/login.html
@@ -23,10 +23,10 @@
   <meta name="twitter:image" content="https://ecomarket-samavi.vercel.app/assets/img/banner.png">
   <!-- Favicon e Estilos -->
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../assets/css/login.css">
+  <link rel="stylesheet" href="../assets/css/paginas/login.css">
   <link rel="stylesheet" href="../assets/css/media-query.css">
-  <link rel="stylesheet" href="../assets/css/feedback.css">
-  <link rel="stylesheet" href="../assets/css/modal.css">
+  <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
+  <link rel="stylesheet" href="../assets/css/componentes/modal.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap&icons=mail,autorenew">
 </head>
