--- a/paginas/vendedor.html
+++ b/paginas/vendedor.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil do Vendedor - EcoMarket</title>
     <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/vendedor.css">
-    <link rel="stylesheet" href="../assets/css/produtos.css">
-    <link rel="stylesheet" href="../assets/css/modal.css">
+    <link rel="stylesheet" href="../assets/css/paginas/vendedor.css">
+    <link rel="stylesheet" href="../assets/css/paginas/produtos.css">
+    <link rel="stylesheet" href="../assets/css/componentes/modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 <body>
