Corrigindo Bugs Visuais e Melhorando Backend

--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -91,7 +91,7 @@
 
       <!-- AÇÕES -->
       <div class="form-acoes">
-        <button type="submit" aria-label="Cadastrar produto">Cadastrar Produto</button>
+        <button id="btn-cadastrar" type="submit" aria-label="Cadastrar produto">Cadastrar Produto</button>
       </div>
     </form>
   </div>
