--- a/paginas/editar-produto.html
+++ b/paginas/editar-produto.html
@@ -117,7 +117,7 @@
       <input type="password" id="senha-confirmacao" placeholder="Digite sua senha">
       <div style="margin-top: 1rem;">
         <div class="modal-botoes">
-          <button id="confirmar-exclusao">Confirmar</button>
+          <button id="confirmar-exclusao" type="button">Confirmar</button>
           <button id="cancelar-exclusao">Cancelar</button>
         </div>
       </div>
