--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -103,7 +103,7 @@
           <option value="">Todas as Categorias</option>
           <option value="artesanal">Artesanato</option>
           <option value="natural">Beleza Natural</option>
-          <option value="moda">Moda Consciente</option>
+          <option value="moda">Moda</option>
           <option value="higiene">Higiene Pessoal</option>
           <option value="decoracao">Decoração</option>
           <option value="kit">Kits e Presentes</option>
