--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -69,10 +69,10 @@
             <option value="" disabled selected>Selecione...</option>
             <option value="artesanal">Artesanato</option>
             <option value="natural">Beleza Natural</option>
-            <option value="moda">Moda Consciente</option>
-            <option value="higiene">Higiene Pessoal Sustentável</option>
-            <option value="decoracao">Decoração Sustentável</option>
-            <option value="kit">Presentes Sustentáveis</option>
+            <option value="moda">Moda</option>
+            <option value="higiene">Higiene Pessoal</option>
+            <option value="decoracao">Decoração</option>
+            <option value="kit">Kits e Presentes</option>
             <option value="outro">Outro</option>
           </select>
         </div>
